fixed: People company too long

--- a/src/components/People.scss
+++ b/src/components/People.scss
@@ -93,8 +93,16 @@
 
     .people-bottom {
       position: absolute;
-      bottom: 0.5rem;
+      bottom: 0.2rem;
       width: 100%;
+      display: grid;
+  //       display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
+
+  // min-height: 4rem;
+      gap: 0.3rem;
     }
 
     .people-signature {
@@ -105,17 +113,6 @@
       -webkit-box-orient: vertical;
       overflow: hidden;
     }
-
-    // h1 {
-    //   position: absolute;
-    //   color: black;
-    //   bottom: 20px;
-    //   width: 80%;
-    //   text-align: center;
-    //   transition: 0.5s;
-    //   z-index: 1;
-    // }
-    // ... existing code ...
   }
 }
 
@@ -123,7 +120,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 0.8rem;
+  margin-bottom: 0.5rem;
 
   a {
     box-sizing: border-box;
